samples/echo-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo-service
  labels:
    istio-injection: enabled
