samples/echo-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels:
    app: echo
spec:
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      annotations:
        sidecar.istio.io/userVolume: '[{"name": "filter", "persistentVolumeClaim": {"claimName": "envoy-filters"}}]'
        sidecar.istio.io/userVolumeMount: '[{"name": "filter", "mountPath": "var/local/lib/envoy-filters", "readonly": true}]'
        sidecar.istio.io/logLevel: "debug"
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: kennship/http-echo
          ports:
            - containerPort: 3000
