samples/echo-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
    service: echo
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: echo
